added more to about page

--- a/about.html
+++ b/about.html
@@ -66,6 +66,8 @@
         </div>
         <!-- Link to the resume page. May relocate. -->
         <div id="resume" class="big primary">
+            <p>Interested in what I've done? Click <a class="link" href="../work.html">here</a> to view my projects and work experience.
+            </p>
             <p>Interested in my stats? Click <a class="link" href="assets/resume_color.pdf">here</a> to view my resume.
             </p>
         </div>
