update, adding several assignments to the writing tab

--- a/work.html
+++ b/work.html
@@ -174,17 +174,47 @@
                     </div>
                     <div class="projectCard">
                         <div class="card" href="#">
-                            <img class="card-img-top" src="assets/markus-spiske-gas-station.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/socialmediatale.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">The Seven-Thirteen: Orange Juice</h5>
-                                <p class="card-text">Nothing like a cold bottle of orange juice when you're a kid on a long road trip. A flash fiction.</p>
-                                <p class="small"><i>Photo by <a href="https://unsplash.com/@markusspiske?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Markus Spiske</a> on <a href="https://unsplash.com/photos/gasoline-station-during-night-time-o8IfF0RUTTs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></i>
+                                <h5 class="card-title">Social Media Fairy Tale</h5>
+                                <p class="card-text">A meme thoughtfully crafted to convey a classic fairy tale.</p>
                                 <div class="cardButtons">
-                                    <a href="https://docs.google.com/document/d/1xNPCB9BfIR1H7orakTqIr39a7Aj6IccR0jJxuZ8_Kak/edit?usp=sharing"
-                                        class="btn">Read Now</a>
+                                    <a href="../projects/tale.html" class="btn">Overview</a>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    <i>December 8th, 2023</i>
+                                    <i>July 7th, 2024</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/benadryl.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Just Enough Benadryl</h5>
+                                <p class="card-text">A personal story, told casually.</p>
+                                <div class="cardButtons">
+                                    <a href="../project/benadryl.html">Overview</a>
+                                    <a href="https://youtu.be/gMfNzsHTt_A" class="btn">Watch Now</a>   
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <i>July 18th, 2024</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projectCard">
+                        <div class="card" href="#">
+                            <img class="card-img-top" src="assets/script.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Webcomic Script</h5>
+                                <p class="card-text">A prototype script for a webcomic.</p>
+                                <div class="cardButtons">
+                                    <a href="../project/webcomic.html" class="btn">Overview</a>
+                                    <a href="https://docs.google.com/document/d/1GUtPqp77AMuoizrVuAe6JsOrFyG5_n9g1BCk6G4denI/edit?usp=sharing" class="btn">Script Document</a>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <i>July 28th, 2024</i>
                                 </div>
                             </div>
                         </div>
@@ -307,8 +337,6 @@
                 </div>
             </div>
             <div id="Experience" class="tabcontent">
-                <!-- Add Code Ninjas -->
-                <!-- Add FedEx -->
                 <div class="big" id="projectCardList">
                     <div class="projectCard">
                         <div class="card" href="#">
