html typo and webcomic overview update

--- a/projects/webcomic.html
+++ b/projects/webcomic.html
@@ -34,7 +34,7 @@
             <!-- The about me. This talks a bit more about myself. -->
             <div id="abstract" class="medium primary">
                 <p>
-                    While humans have always told quick quips and stories to one another, memes are new, along with social media. In a digital storytelling class, we were tasked with adapting an existing fairy tale into a social media format. There were dozens of platforms I could have chosen, but I chose Twitter (now X) because Twitter posts are the foundation for many popular memes. In my particular case, I chose to adapt Little Red Riding Hood for a Twitter audience. I ran into challenges with the character limit. Despite how short Grimm's fairy tales already are, you get an even more paltry sum of 280 characters on Twitter.
+                    Webcomics are a new form of storytelling, popularized by websites like Webtoons. In this assignment, I created a pitch, outline, and formatted script for an original 6 page webcomic. The full document describes each panel, alongside SFX and dialogue. While the pitch ends after 6 pages, the comic, if published, would produce 3 pages a week on several platforms. 
                 </p>
             </div>
 
