--- a/work.html
+++ b/work.html
@@ -194,7 +194,7 @@
                                 <h5 class="card-title">Just Enough Benadryl</h5>
                                 <p class="card-text">A personal story, told casually.</p>
                                 <div class="cardButtons">
-                                    <a href="../project/benadryl.html">Overview</a>
+                                    <a href="../project/benadryl.html" class="btn">Overview</a>
                                     <a href="https://youtu.be/gMfNzsHTt_A" class="btn">Watch Now</a>   
                                 </div>
                                 <div class="card-footer text-muted">
