another html typo

--- a/work.html
+++ b/work.html
@@ -194,7 +194,7 @@
                                 <h5 class="card-title">Just Enough Benadryl</h5>
                                 <p class="card-text">A personal story, told casually.</p>
                                 <div class="cardButtons">
-                                    <a href="../project/benadryl.html" class="btn">Overview</a>
+                                    <a href="../projects/benadryl.html" class="btn">Overview</a>
                                     <a href="https://youtu.be/gMfNzsHTt_A" class="btn">Watch Now</a>   
                                 </div>
                                 <div class="card-footer text-muted">
@@ -210,7 +210,7 @@
                                 <h5 class="card-title">Webcomic Script</h5>
                                 <p class="card-text">A prototype script for a webcomic.</p>
                                 <div class="cardButtons">
-                                    <a href="../project/webcomic.html" class="btn">Overview</a>
+                                    <a href="../projects/webcomic.html" class="btn">Overview</a>
                                     <a href="https://docs.google.com/document/d/1GUtPqp77AMuoizrVuAe6JsOrFyG5_n9g1BCk6G4denI/edit?usp=sharing" class="btn">Script Document</a>
                                 </div>
                                 <div class="card-footer text-muted">
