--- a/homepage.html
+++ b/homepage.html
@@ -42,8 +42,16 @@
                     <a class="link" href="https://outlook.office365.com/">📬 Outlook</a>
                 </p>
                 <p>
+                    <a class="link" href="https://teams.microsoft.com/v2/">👥 Teams</a>
+                </p>
+                <p>
+                    <a class="link" href="https://hcm-sso.onehcm.usg.edu/">⏲️ OneUSG Connect</a>
+                </p>
+                <p>
                     <a class="link" href="https://app.netdata.cloud/">📊 NetData Monitor</a>
                 </p>
+                
+                
                 <!-- <p><h2 class="header big">Depricated</h2></p>
                 <p>
                     <a class="link" href="https://rosehulman.campusgroups.com/login_only">🤝 Campus Groups</a>
