start of renovations, add vintagestory.html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 <body class="body">
     <header>
         <div class="bar">
+            <hr class="headerLine">
             <a href="\" class="btn">Home</a>
-            <a href="\work.html" class="btn">My Work</a>
+            <a href="\work.html" class="btn selected">My Work</a>
             <a href="\about.html" class="btn">About Me</a>
-            <!-- <a href="\blog.html" class="btn">Blog</a> Don't visit this, nothing there -->
             <a href="\contact.html" class="btn">Contact</a>
+            <hr class="headerLine">
         </div>
     </header>
     <main class="main" id="top">
