add title line and fix page title wrapping

--- a/projects/vintagestory.html
+++ b/projects/vintagestory.html
@@ -29,11 +29,11 @@
             </div> -->
         </header>
         <main class="main" id="top">            
-            <div class="header primary">
+            <div class="header">
                 <h1 class="title"> 
                     Vintage Story Showcase Prototype
                 </h1>
-                <!-- <hr class="headerLine"> -->
+                <hr class="headerLine">
             </div>
             <div class="medium primary">
                 
