changes to home,work,vs, and js files

--- a/projects/vintagestory.html
+++ b/projects/vintagestory.html
@@ -50,14 +50,6 @@
                     </div>
                     <div class="infoCard">
                         <p class="infoCardHeader">
-                            Team
-                        </p>
-                        <p class="infoCardContent">
-                            Individual
-                        </p>
-                    </div>
-                    <div class="infoCard">
-                        <p class="infoCardHeader">
                             Tools
                         </p>
                         <p class="infoCardContent">
@@ -111,7 +103,7 @@
                             Easy to Understand
                         </p>
                         <p class="infoCardContent">
-                            I wanted to make the complex game systems easy to understand by considering the laws and principles of user interface design while avoiding dark patterns.
+                            I wanted to make the complex game systems easy to understand by considering the laws and principles of user interface design.
                         </p>
                     </div>
 
