--- a/work.html
+++ b/work.html
@@ -30,8 +30,8 @@
             <!-- Tab links -->
             <button class="tabBtn active" onclick="openCity(event, 'Design')">Design</button>
             <button class="tabBtn" onclick="openCity(event, 'Writing')">Writing</button>
-            <button class="tabBtn" onclick="openCity(event, 'Software')">Software</button>
-            <button class="tabBtn" onclick="openCity(event, 'Experience')">Work Experience</button>
+            <!-- <button class="tabBtn" onclick="openCity(event, 'Software')">Software</button> -->
+            <button class="tabBtn" onclick="openCity(event, 'Experience')">Experience</button>
         </div>
     </header>
     <main class="main" id="top">
@@ -189,7 +189,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="projectCard">
+                    <!-- <div class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/benadryl.jpg" alt="Card image cap">
                             <div class="card-body">
@@ -204,7 +204,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/script.png" alt="Card image cap">
