--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
         <div class="bar">
             <hr class="headerLine">
-            <a href="\" class="btn">Home</a>
-            <a href="\work.html" class="btn selected">My Work</a>
+            <a href="\" class="btn selected">Home</a>
+            <a href="\work.html" class="btn">My Work</a>
             <a href="\about.html" class="btn">About Me</a>
             <a href="\contact.html" class="btn">Contact</a>
             <hr class="headerLine">
