--- a/homepage.html
+++ b/homepage.html
@@ -17,11 +17,13 @@
     <body class="body">
         <header>
             <div class="bar">
+                <hr class="headerLine">
                 <a href="\" class="btn">Home</a>
                 <a href="\work.html" class="btn">My Work</a>
                 <a href="\about.html" class="btn">About Me</a>
-                <a href="\blog.html" class="btn">Blog</a>
                 <a href="\contact.html" class="btn">Contact</a>
+                <a href="\homepage.html" class="btn selected">Secret</a>
+                <hr class="headerLine">
             </div>
         </header>
         <main class="main" id="top">
