add images to vs project page

--- a/projects/vintagestory.html
+++ b/projects/vintagestory.html
@@ -143,6 +143,7 @@
                         <p class="infoCardContent">
                             <b class="b">Jakob's Law</b> states that users both prefer and have an easier time navigating websites that work similarly to websites they have browsed in the past. In my project, I considered Jakob's Law by using a standard top-of-the-screen navigation bar, carousel elements, and hero images.
                         </p>
+                        <img class="infoCardImage" src="../assets/jacobslaw.png" alt="">
                     </div>
 
                     <div class="infoCard">
@@ -152,6 +153,7 @@
                         <p class="infoCardContent">
                             The <b class="b">Spatial Contiguity Principle</b> states that users learn better when images and text in a webpage are in close proximity, rather than far away. I applied this principle in my project by placing text within and in close proximity to graphics to help users find key information.
                         </p>
+                        <img class="infoCardImage" src="../assets/spacialcontiguityprinciple.png" alt="">
                     </div>
 
                     <div class="infoCard">
@@ -161,6 +163,7 @@
                         <p class="infoCardContent">
                             <b class="b">Fitts’s Law</b> states that the time required to interact with an intractable element is proportional to the distance to and size of that element. In my project, I accounted for Fitts’s law by making the button and interactable elements in my prototype large. This accommodates for all kinds of users, but also makes all the interactables easy and quick to use for everyone.
                         </p>
+                        <img class="infoCardImage" src="../assets/fittslaw.png" alt="">
                     </div>
 
                 </div>
