change bad content

--- a/projects/vintagestory.html
+++ b/projects/vintagestory.html
@@ -186,7 +186,7 @@
                     Retrospective
                 </h3>
                 <p class="paragraph">
-                    My final project prototype was a video game showcase website for a game called Vintage Story. The prototype was made in Figma, and each page is fully interactable. The first page is the homepage, which shows off the game to new users. The second page is the about the game World, and the third page shows all of the game's features and progression. The final page guides the user to purchase the game. 
+                    My design career has so far been focused on learning the nitty-gritty and small details of design work. This project was an opportunity to simply execute on what I've learned in the past, and I feel that I executed well. I've always been attracted to simple and no-nonsense designs, but this project allowed me to add details and complexity that I normally would have passed on. Overall, this project was a great exercise that I'm proud of. 
                 </p>
                 
         </main>
