work on index, work, and vintagestory pages

--- a/work.html
+++ b/work.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <title>Henry Verrill's Website</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
-    <link rel="icon" href="assets/favicon.png">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>Henry Verrill's Website</title>
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
+        <link rel="icon" href="assets/favicon.png">
+    </head>
 
 <body class="body">
     <header>
@@ -43,8 +43,8 @@
             
 
             <!-- Tab content -->
-            <div id="Design" class="tabcontent" style="display: block;">
-                <div class="big" id="projectCardList">
+            <div id="Design" class="tabcontent" style="display: flex;">
+                <div class="big projectCardList">
                     <div class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/booktunes.png" alt="Card image cap">
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div id="Writing" class="tabcontent">
-                <div class="big" id="projectCardList">
+                <div class="big projectCardList">
                     <!-- Add Wizard Farming -->
                     <div class="projectCard">
                         <div class="card" href="#">
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div id="Software" class="tabcontent">
-                <div class="big" id="projectCardList">
+                <div class="big projectCardList">
                     <div class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/teamflatearth.png" alt="Card image cap">
@@ -339,7 +339,7 @@
                 </div>
             </div>
             <div id="Experience" class="tabcontent">
-                <div class="big" id="projectCardList">
+                <div class="big projectCardList">
                     <div class="projectCard">
                         <div class="card" href="#">
                             <img class="card-img-top" src="assets/fedex.webp" alt="Card image cap">
