--- a/projects/vintagestory.html
+++ b/projects/vintagestory.html
@@ -29,7 +29,8 @@
             </div> -->
         </header>
         <main class="main" id="top">            
-            <div class="header">
+            <div class="header primary">
+                <hr class="headerLine">
                 <h1 class="title"> 
                     Vintage Story Showcase Prototype
                 </h1>
@@ -75,7 +76,7 @@
 
                 </div>
                 <div class="imgContainer">
-                    <img class="image" src="../assets/vintagestorycover.png" alt="">
+                    <img class="inlineImage" src="../assets/vintagestorycover.png" alt="">
                 </div>
                 
                 <!-- Intro -->
@@ -128,7 +129,7 @@
                     Before I started work on the prototype, I first made a project proposal that described how I would consider and implement the various laws and principles of user interface design. In the proposal, I explained how I planned to use each principle in my prototype. The link below will take you to a PDF of my project proposal.
                 </p>
                 <div class="imgContainer">
-                    <img class="image" src="../assets/proposal.png" alt="">
+                    <a href="https://docs.google.com/document/d/1ayFlj66bRN29R4_X8gKthqbOBsVKaBpUECXPCdzalsQ/edit?usp=sharing"><img class="inlineImage" src="../assets/proposal.png" alt=""></a>
                     <a href="https://docs.google.com/document/d/1ayFlj66bRN29R4_X8gKthqbOBsVKaBpUECXPCdzalsQ/edit?usp=sharing" class="btn auxbtn">View Proposal</a>
                 </div>
                 <h4 class="title">
@@ -177,7 +178,7 @@
                     My final project prototype was a video game showcase website for a game called Vintage Story. The prototype was made in Figma, and each page is fully interactable. The first page is the homepage, which shows off the game to new users. The second page is the about the game World, and the third page shows all of the game's features and progression. The final page guides the user to purchase the game. 
                 </p>
                 <div class="imgContainer">
-                    <img class="image" src="../assets/vintagestoryprototype.png" alt="">
+                    <a href="https://www.figma.com/proto/1MSOH6R8qGqbtmMcGdngmN/Vintage-Story-Feature-Showcase?node-id=1-87&p=f&t=1erCWs34o9F3vMDc-1&scaling=min-zoom&content-scaling=fixed&page-id=1%3A3&starting-point-node-id=1%3A87"><img class="inlineImage" src="../assets/vintagestoryprototype.png" alt=""></a>
                     <a href="https://www.figma.com/proto/1MSOH6R8qGqbtmMcGdngmN/Vintage-Story-Feature-Showcase?node-id=1-87&p=f&t=1erCWs34o9F3vMDc-1&scaling=min-zoom&content-scaling=fixed&page-id=1%3A3&starting-point-node-id=1%3A87" class="btn auxbtn">View Prototype</a>
                 </div>
 
