added hero image to vs page

--- a/projects/vintagestory.html
+++ b/projects/vintagestory.html
@@ -24,9 +24,9 @@
                 <a href="\contact.html" class="btn">Contact</a>
                 <hr class="headerLine">
             </div>
-            <!-- <div class="hero">
+            <div class="hero">
                 <img class="heroImage" src="../assets/vintagestoryhero.png" alt="A screenshot showing a virtual interview taking place.">
-            </div> -->
+            </div>
         </header>
         <main class="main" id="top">            
             <div class="header primary">
