--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="header"><img class="image" src="assets/book.png" alt="" style="max-width: 25%;"></div>
                 <div id="projectsSection" class="header primary">
                     <hr class="headerLine">
-                    <p class="title">My Projects</p>
+                    <p class="title">My Work</p>
                     <hr class="headerLine">
                     
                 </div>
@@ -107,20 +107,16 @@
                         </div>
                         <div class="projectCard">
                             <div class="card" href="#">
-                                <img class="card-img-top" src="assets/markdownblog.png" alt="Card image cap">
+                                <img class="card-img-top" src="assets/library.png" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Markdown Blog</h5>
-                                    <p class="card-text">A easy to use website that allows Rose students to create blog
-                                        posts
-                                        with
-                                        markdown and search through them with keywords and tags.</p>
-                                    <p class="small"><i>Collaborated with William Gardner</i></p>
+                                    <h5 class="card-title">Library Student Assistant</h5>
+                                    <p class="card-text">Working as a Student Assistant in the Kennesaw State University Library. Responsible for sorting books, shelf reading, weeding, editing and reviewing spreadsheets, and more.</p>
+                                    <!-- <p class="small"><i>Collaborated with Evan Slater</i></p> -->
                                     <div class="cardButtons">
-                                        <a href="https://rosehulmanprojectvault.org/project/-MqFP2ilSOclYyzZEGUx"
-                                            class="btn">Source</a>
+                                        <a href="https://campus.kennesaw.edu/offices-services/library/index.php" class="btn">Library Website</a>
                                     </div>
                                     <div class="card-footer text-muted">
-                                        <i>Febuary 28th, 2022</i>
+                                        <i>January 2025 - Current</i>
                                     </div>
                                 </div>
                             </div>
