main page almost done?

--- a/index.html
+++ b/index.html
@@ -86,21 +86,18 @@
                     </div>
                         <div class="projectCard">
                             <div class="card" href="#">
-                                <img class="card-img-top" src="assets/groupcalendar.png" alt="Card image cap">
+                                <img class="card-img-top" src="assets/hirescape.png" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Group Event Scheduler</h5>
-                                    <p class="card-text">A group event scheduler that averages a study group's availability
-                                        for
-                                        easy
-                                        planning.</p>
-                                    <p class="small"><i>Collaborated with Evan Slater</i></p>
+                                    <h5 class="card-title">Hirescape Job Search Prototype</h5>
+                                    <p class="card-text">A complete Figma prototype for a job bulletin website, alongside our brainstorming FigJam document.</p>
+                                    <p class="small"><i>Collaborated with Cole Andrews, Scott Rzasa, and Judson Lowe</i></p>
                                     <div class="cardButtons">
-                                        <a href="https://rosehulmanprojectvault.org/project/-MWdqwK2GH-erjes1lsR"
-                                            class="btn">Source</a>
-                                        <a href="../projects/calendar.html" class="btn">More Info</a>
+                                        <a href="https://www.figma.com/design/zi6TEXR4cm4mvBkcaykc0i/Team-Andrews-Design-Workspace?m=auto&t=SIEw36nHlwptXGEa-1"
+                                            class="btn">Prototype</a>
+                                        <a href="https://www.figma.com/board/2GeZgQ1fro5mbqMqcWoyBV/Team-Andrews-Figjam-Workspace?t=SIEw36nHlwptXGEa-1" class="btn">Brainstorming Board</a>
                                     </div>
                                     <div class="card-footer text-muted">
-                                        <i>May 21st, 2021</i>
+                                        <i>Fall 2024</i>
                                     </div>
                                 </div>
                             </div>
@@ -116,7 +113,7 @@
                                         <a href="https://campus.kennesaw.edu/offices-services/library/index.php" class="btn">Library Website</a>
                                     </div>
                                     <div class="card-footer text-muted">
-                                        <i>January 2025 - Current</i>
+                                        <i>January 2025  - Current</i>
                                     </div>
                                 </div>
                             </div>
