attribution for book graphic

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <a href="\contact.html" class="btn">Contact</a>
                 <hr class="headerLine">
             </div>
-            <div class="hero">
+            <!-- <div class="hero">
                 <img class="heroImage" src="assets/mainheroimage.png" alt="A screenshot showing a virtual interview taking place.">
-            </div>
+            </div> -->
         </header>
         
         <main class="main" id="top">
@@ -131,7 +131,7 @@
         </main>
         <footer class="footer">
             <div class="footContent">
-                <p class="small">Copyright Henry Verrill</p>
+                <p class="small">Copyright Henry Verrill <br><i>Open Book graphic from <a href="https://stock.adobe.com/my/contributor/206710010/good-studio?load_type=author&prev_url=detail">Good Studio</a></i></p>
             </div>
         </footer>
         <div class="bottomBar"></div>
